--- a/views/success/fr.tmpl
+++ b/views/success/fr.tmpl
@@ -1,30 +1,63 @@
-<article>
-    <p>Cher(e) {{customer}},</p>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <title>Dul N'Nouk White</title>
+    <meta name="description"
+          content="Les Dul and Nouk White sont un groupe de rock alternatif madérien avec un répertoire composé principalement de chansons originales qui visitent des genres musicaux très différents, tels que le rock, le fado, le blues, la pop, le jazz et la musique du monde." />
+    <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
+    <meta name="author" content="dul and nouk white" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/store.css?<?php echo $cache; ?>"/>
+    <link rel="icon" type="image/jpg" href="img/favicon.jpg"/>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+</head>
+<body>
+<main>
+    <header>
+        <h1>Dul and Nouk White</h1>
+        <h2>Orgânico 2023</h2>
+    </header>
+    <article>
+        <p>Cher(e) {{customer}},</p>
 
-    <p>Nous tenons à prendre un moment pour exprimer notre sincère gratitude pour votre récente acquisition de notre
-        t-shirt à l'effigie de notre groupe de musique. Votre soutien en tant que fan signifie énormément pour nous, et
-        nous vous sommes vraiment reconnaissants d'avoir choisi de porter notre merchandising.
-    </p>
-    <p>Nous comprenons que recevoir votre t-shirt rapidement est important pour vous, et nous voulons vous assurer que
-        nous travaillons diligemment pour préparer et expédier votre commande dès que possible. Notre équipe est engagée
-        à assurer un processus d'expédition fluide et efficace, afin que vous puissiez arborer fièrement votre t-shirt
-        du groupe sans attendre.
-    </p>
-    <p>Soyez assuré(e) que nous avons bien pris note de votre adresse de livraison et que nous mettrons tout en œuvre
-        pour expédier votre t-shirt dans les meilleurs délais. Nous apprécions votre patience et votre compréhension
-        pendant que nous nous efforçons de vous livrer rapidement.
-    </p>
-    <p>Encore une fois, nous tenons à vous exprimer notre profonde gratitude pour votre soutien. Votre achat nous aide
-        non seulement financièrement, mais nous motive également à continuer de créer et de partager notre musique avec
-        le monde entier. Nous sommes impatients que vous receviez votre t-shirt et que vous vous joigniez à nous pour
-        représenter fièrement notre groupe.
-    </p>
-    <p>Si vous avez d'autres questions ou préoccupations concernant votre commande, n'hésitez pas à contacter notre
-        équipe du service client. Nous sommes là pour vous aider de toutes les manières possibles.
-    </p>
-    <p>Merci encore d'être un fan incroyable et de soutenir notre parcours musical.
-    </p>
-    <p>Rock on !
-    </p>
-    <p>Dul and Nouk White</p>
-</article>
+        <p>Nous tenons à prendre un moment pour exprimer notre sincère gratitude pour votre récente acquisition de notre
+            t-shirt à l'effigie de notre groupe de musique. Votre soutien en tant que fan signifie énormément pour nous, et
+            nous vous sommes vraiment reconnaissants d'avoir choisi de porter notre merchandising.
+        </p>
+        <p>Nous comprenons que recevoir votre t-shirt rapidement est important pour vous, et nous voulons vous assurer que
+            nous travaillons diligemment pour préparer et expédier votre commande dès que possible. Notre équipe est engagée
+            à assurer un processus d'expédition fluide et efficace, afin que vous puissiez arborer fièrement votre t-shirt
+            du groupe sans attendre.
+        </p>
+        <p>Soyez assuré(e) que nous avons bien pris note de votre adresse de livraison et que nous mettrons tout en œuvre
+            pour expédier votre t-shirt dans les meilleurs délais. Nous apprécions votre patience et votre compréhension
+            pendant que nous nous efforçons de vous livrer rapidement.
+        </p>
+        <p>Encore une fois, nous tenons à vous exprimer notre profonde gratitude pour votre soutien. Votre achat nous aide
+            non seulement financièrement, mais nous motive également à continuer de créer et de partager notre musique avec
+            le monde entier. Nous sommes impatients que vous receviez votre t-shirt et que vous vous joigniez à nous pour
+            représenter fièrement notre groupe.
+        </p>
+        <p>Si vous avez d'autres questions ou préoccupations concernant votre commande, n'hésitez pas à contacter notre
+            équipe du service client. Nous sommes là pour vous aider de toutes les manières possibles.
+        </p>
+        <p>Merci encore d'être un fan incroyable et de soutenir notre parcours musical.
+        </p>
+        <p>Rock on !
+        </p>
+        <p>Dul and Nouk White</p>
+    </article>
+</main>
+
+<script src="node_modules/accounting/accounting.min.js"></script>
+<script src="node_modules/store2/dist/store2.min.js"></script>
+<script src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
+<script src="node_modules/mustache/mustache.min.js"></script>
+<script src="node_modules/@jvitela/mustache-wax/dist/mustache-wax.min.js"></script>
+</body>
+</html>
