--- a/views/success/pt.tmpl
+++ b/views/success/pt.tmpl
@@ -1,30 +1,55 @@
-<article>
-    <p>Caro(a) {{customer}},</p>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <title>Dul N'Nouk White</title>
+    <meta name="description"
+          content="Os Dul and Nouk White são uma banda de rock alternativo madeirense com um repertório constituído, maioritariamente, por temas originais que visitam géneros musicais bastante distintos como o rock, o fado, o blues, o pop, o jazz e a música do mundo." />
+    <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
+    <meta name="author" content="dul and nouk white" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/store.css?<?php echo $cache; ?>"/>
+    <link rel="icon" type="image/jpg" href="img/favicon.jpg"/>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+</head>
+<body>
+<main>
+    <header>
+        <h1>Dul and Nouk White</h1>
+        <h2>Orgânico 2023</h2>
+    </header>
+    <article>
+        <p>Caro(a) {{customer}},</p>
 
-    <p>Queríamos aproveitar este momento para expressar nossa sincera gratidão pela sua recente compra da camiseta da
-        nossa banda de música. O seu apoio como fã significa tudo para nós, e estamos verdadeiramente agradecidos pela
-        sua decisão de usar a nossa mercadoria.
-    </p>
-    <p>Entendemos que receber a sua camiseta prontamente é importante para você, e queremos garantir que estamos
-        trabalhando diligentemente para atender e entregar o seu pedido o mais rápido possível. Nossa equipe está
-        comprometida em garantir um processo de envio tranquilo e eficiente, para que você possa usar a sua camiseta da
-        banda com orgulho, sem atrasos.
-    </p>
-    <p>Tenha a certeza de que anotamos o seu endereço de entrega e faremos todos os esforços para enviar a sua camiseta
-        prontamente. Valorizamos a sua paciência e compreensão enquanto trabalhamos para entregar o seu pedido
-        rapidamente.
-    </p>
-    <p>Mais uma vez, queremos expressar nossa profunda gratidão pelo seu apoio. Sua compra não apenas nos ajuda
-        financeiramente, mas também nos motiva a continuar criando e compartilhando nossa música com o mundo. Mal
-        podemos esperar para que você receba a sua camiseta e se junte a nós ao representar orgulhosamente a nossa
-        banda.
-    </p>
-    <p>Se você tiver alguma dúvida ou preocupação adicional em relação ao seu pedido, fique à vontade para entrar em
-        contato com nossa equipe de atendimento ao cliente. Estamos aqui para ajudar da melhor forma possível.
-    </p>
-    <p>Mais uma vez, obrigado por ser um fã incrível e por apoiar a nossa jornada musical.
-    </p>
-    <p>Rock on!
-    </p>
-    <p>Dul and Nouk White</p>
-</article>
+        <p>Queríamos aproveitar este momento para expressar nossa sincera gratidão pela sua recente compra da camiseta da
+            nossa banda de música. O seu apoio como fã significa tudo para nós, e estamos verdadeiramente agradecidos pela
+            sua decisão de usar a nossa mercadoria.
+        </p>
+        <p>Tenha a certeza de que anotamos o seu endereço de entrega e faremos todos os esforços para enviar a sua camiseta
+            prontamente. Valorizamos a sua paciência e compreensão enquanto trabalhamos para entregar o seu pedido
+            rapidamente.
+        </p>
+        <p>Mais uma vez, queremos expressar nossa profunda gratidão pelo seu apoio. Sua compra não apenas nos ajuda
+            financeiramente, mas também nos motiva a continuar criando e compartilhando nossa música com o mundo. Mal
+            podemos esperar para que você receba a sua camiseta e se junte a nós ao representar orgulhosamente a nossa
+            banda.
+        </p>
+        <p>Mais uma vez, obrigado por ser um fã incrível e por apoiar a nossa jornada musical.
+        </p>
+        <p>Rock on!
+        </p>
+        <p>Dul and Nouk White</p>
+    </article>
+</main>
+
+<script src="node_modules/accounting/accounting.min.js"></script>
+<script src="node_modules/store2/dist/store2.min.js"></script>
+<script src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
+<script src="node_modules/mustache/mustache.min.js"></script>
+<script src="node_modules/@jvitela/mustache-wax/dist/mustache-wax.min.js"></script>
+</body>
+</html>
