--- a/views/success/fr.tmpl
+++ b/views/success/fr.tmpl
@@ -5,8 +5,7 @@
     <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <title>Dul N'Nouk White</title>
-    <meta name="description"
-          content="Les Dul and Nouk White sont un groupe de rock alternatif madérien avec un répertoire composé principalement de chansons originales qui visitent des genres musicaux très différents, tels que le rock, le fado, le blues, la pop, le jazz et la musique du monde." />
+    <meta name="description" content="Les Dul and Nouk White sont un groupe de rock alternatif madérien avec un répertoire composé principalement de chansons originales qui visitent des genres musicaux très différents, tels que le rock, le fado, le blues, la pop, le jazz et la musique du monde." />
     <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
     <meta name="author" content="dul and nouk white" />
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
@@ -52,6 +51,17 @@
         </p>
         <p>Dul and Nouk White</p>
     </article>
+    <footer>
+        <a  href="https://www.facebook.com/dulandnoukwhite">
+            <ion-icon name="logo-facebook"></ion-icon>
+        </a>
+        <a href="https://www.instagram.com/dulandnoukwhiteband/">
+            <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://www.youtube.com/c/DulNNoukWhite">
+            <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+    </footer>
 </main>
 
 <script src="node_modules/accounting/accounting.min.js"></script>
