--- a/views/success/pt.tmpl
+++ b/views/success/pt.tmpl
@@ -5,8 +5,7 @@
     <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <title>Dul N'Nouk White</title>
-    <meta name="description"
-          content="Os Dul and Nouk White são uma banda de rock alternativo madeirense com um repertório constituído, maioritariamente, por temas originais que visitam géneros musicais bastante distintos como o rock, o fado, o blues, o pop, o jazz e a música do mundo." />
+    <meta name="description" content="Os Dul and Nouk White são uma banda de rock alternativo madeirense com um repertório constituído, maioritariamente, por temas originais que visitam géneros musicais bastante distintos como o rock, o fado, o blues, o pop, o jazz e a música do mundo." />
     <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
     <meta name="author" content="dul and nouk white" />
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
@@ -44,6 +43,17 @@
         </p>
         <p>Dul and Nouk White</p>
     </article>
+    <footer>
+        <a  href="https://www.facebook.com/dulandnoukwhite">
+            <ion-icon name="logo-facebook"></ion-icon>
+        </a>
+        <a href="https://www.instagram.com/dulandnoukwhiteband/">
+            <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://www.youtube.com/c/DulNNoukWhite">
+            <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+    </footer>
 </main>
 
 <script src="node_modules/accounting/accounting.min.js"></script>
