--- a/views/success/fr.tmpl
+++ b/views/success/fr.tmpl
@@ -2,18 +2,18 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <title>Dul N'Nouk White</title>
     <meta name="description" content="Les Dul and Nouk White sont un groupe de rock alternatif madérien avec un répertoire composé principalement de chansons originales qui visitent des genres musicaux très différents, tels que le rock, le fado, le blues, la pop, le jazz et la musique du monde." />
     <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
     <meta name="author" content="dul and nouk white" />
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/index.css"/>
-    <link rel="stylesheet" href="css/store.css?<?php echo $cache; ?>"/>
-    <link rel="icon" type="image/jpg" href="img/favicon.jpg"/>
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/index.css?{{cache}}"/>
+    <link rel="stylesheet" href="/css/store.css?{{cache}}"/>
+    <link rel="icon" type="image/jpg" href="/img/favicon.jpg"/>
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
+    <script type="module" src="//unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
 <main>
@@ -64,10 +64,10 @@
     </footer>
 </main>
 
-<script src="node_modules/accounting/accounting.min.js"></script>
-<script src="node_modules/store2/dist/store2.min.js"></script>
-<script src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
-<script src="node_modules/mustache/mustache.min.js"></script>
-<script src="node_modules/@jvitela/mustache-wax/dist/mustache-wax.min.js"></script>
+<script src="/node_modules/accounting/accounting.min.js"></script>
+<script src="/node_modules/store2/dist/store2.min.js"></script>
+<script src="/node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
+<script src="/node_modules/mustache/mustache.min.js"></script>
+<script src="/node_modules/@jvitela/mustache-wax/dist/mustache-wax.min.js"></script>
 </body>
 </html>
