--- a/views/success/en.tmpl
+++ b/views/success/en.tmpl
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <meta charset="UTF-8" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
     <title>Dul N'Nouk White</title>
-    <meta name="description"
-          content="Dul and Nouk White are a Madeiran alternative rock band with a repertoire consisting mostly of original themes that visit very different musical genres, such as rock, fado, blues, pop, jazz and world music.">
-    <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal">
-    <meta name="author" content="dul and nouk white">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/index.css"/>
-    <link rel="stylesheet" href="/node_modules/flag-icons/css/flag-icons.min.css"/>
-    <link rel="icon" type="image/jpg" href="img/favicon.jpg"/>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <meta name="description" content="Dul and Nouk White are a Madeiran alternative rock band with a repertoire consisting mostly of original themes that visit very different musical genres, such as rock, fado, blues, pop, jazz and world music." />
+    <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
+    <meta name="author" content="dul and nouk white" />
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/index.css?{{cache}}"/>
+    <link rel="stylesheet" href="/css/store.css?{{cache}}"/>
+    <link rel="icon" type="image/jpg" href="/img/favicon.jpg"/>
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
+    <script type="module" src="//unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
 <main>
@@ -57,11 +55,11 @@
         </a>
     </footer>
 </main>
-<script src="node_modules/accounting/accounting.min.js"></script>
-<script src="node_modules/store2/dist/store2.min.js"></script>
-<script src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
-<script src="node_modules/mustache/mustache.min.js"></script>
-<script src="node_modules/@jvitela/mustache-wax/dist/mustache-wax.min.js"></script>
+<script src="/node_modules/accounting/accounting.min.js"></script>
+<script src="/node_modules/store2/dist/store2.min.js"></script>
+<script src="/node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
+<script src="/node_modules/mustache/mustache.min.js"></script>
+<script src="/node_modules/@jvitela/mustache-wax/dist/mustache-wax.min.js"></script>
 </body>
 </html>
 
