--- a/views/success/pt.tmpl
+++ b/views/success/pt.tmpl
@@ -2,18 +2,18 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <title>Dul N'Nouk White</title>
     <meta name="description" content="Os Dul and Nouk White são uma banda de rock alternativo madeirense com um repertório constituído, maioritariamente, por temas originais que visitam géneros musicais bastante distintos como o rock, o fado, o blues, o pop, o jazz e a música do mundo." />
     <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
     <meta name="author" content="dul and nouk white" />
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/index.css"/>
-    <link rel="stylesheet" href="css/store.css?<?php echo $cache; ?>"/>
-    <link rel="icon" type="image/jpg" href="img/favicon.jpg"/>
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/index.css?{{cache}}"/>
+    <link rel="stylesheet" href="/css/store.css?{{cache}}"/>
+    <link rel="icon" type="image/jpg" href="/img/favicon.jpg"/>
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
+    <script type="module" src="//unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
 <main>
@@ -56,10 +56,10 @@
     </footer>
 </main>
 
-<script src="node_modules/accounting/accounting.min.js"></script>
-<script src="node_modules/store2/dist/store2.min.js"></script>
-<script src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
-<script src="node_modules/mustache/mustache.min.js"></script>
-<script src="node_modules/@jvitela/mustache-wax/dist/mustache-wax.min.js"></script>
+<script src="/node_modules/accounting/accounting.min.js"></script>
+<script src="/node_modules/store2/dist/store2.min.js"></script>
+<script src="/node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
+<script src="/node_modules/mustache/mustache.min.js"></script>
+<script src="/node_modules/@jvitela/mustache-wax/dist/mustache-wax.min.js"></script>
 </body>
 </html>
