--- a/views/fr/header.tmpl
+++ b/views/fr/header.tmpl
@@ -3,7 +3,7 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
     <title>Dul N'Nouk White</title>
-    <meta name="description" content="Dul and Nouk White are a Madeiran alternative rock band with a repertoire consisting mostly of original themes that visit very different musical genres, such as rock, fado, blues, pop, jazz and world music." />
+    <meta name="description" content="Les Dul and Nouk White sont un groupe de rock alternatif madérien avec un répertoire composé principalement de chansons originales qui visitent des genres musicaux très différents, tels que le rock, le fado, le blues, la pop, le jazz et la musique du monde." />
     <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
     <meta name="author" content="dul and nouk white" />
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
