--- a/views/fr/landing.tmpl
+++ b/views/fr/landing.tmpl
@@ -16,3 +16,10 @@
         <a href="/pt">pt</a>
     </div>
 </article>
+<audio preload="metadata" loop>
+    <source src="/mp3/test6.mp3" type="audio/mpeg">
+</audio>
+<section class="permission muted">
+    <ion-icon name="volume-mute-outline"></ion-icon>
+    <ion-icon name="volume-off-outline"></ion-icon>
+</section>
