--- a/views/pt/header.tmpl
+++ b/views/pt/header.tmpl
@@ -3,7 +3,7 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
     <title>Dul N'Nouk White</title>
-    <meta name="description" content="Dul and Nouk White are a Madeiran alternative rock band with a repertoire consisting mostly of original themes that visit very different musical genres, such as rock, fado, blues, pop, jazz and world music." />
+    <meta name="description" content="Os Dul and Nouk White são uma banda de rock alternativo madeirense com um repertório constituído, maioritariamente, por temas originais que visitam géneros musicais bastante distintos como o rock, o fado, o blues, o pop, o jazz e a música do mundo." />
     <meta name="keywords" content="dul organic orgânico music madeira rock pop portugal" />
     <meta name="author" content="dul and nouk white" />
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
