--- a/views/fr/cart.tmpl
+++ b/views/fr/cart.tmpl
@@ -1,5 +1,5 @@
 <header>
-    <h1>As tuas T-Shirts</h1>
+    <h1>Vos tee-shirts</h1>
     <i class="fa-solid fa-circle-xmark"></i>
 </header>
 <main>
@@ -7,7 +7,7 @@
         <tbody>
         {{#checkout}}
             <tr>
-                <td>Tamanho {{size}}</td>
+                <td>Taille {{size}}</td>
                 <td>x{{amount}}</td>
                 <td>{{total | price}}</td>
             </tr>
@@ -21,6 +21,6 @@
     </table>
 </main>
 <footer>
-    <button type="button" class="btn btn-danger">Cancelar compra</button>
-    <button type="button" class="btn btn-success">Finalizar compra</button>
+    <button type="button" class="btn btn-danger">Annuler</button>
+    <button type="button" class="btn btn-success">Vérifier</button>
 </footer>
