--- a/views/fr/paypal/success.tmpl
+++ b/views/fr/paypal/success.tmpl
@@ -1,23 +1,26 @@
+<header>
+    <i class="fa-solid fa-circle-xmark"></i>
+</header>
 <article>
-    <p>Dear {{customer}},</p>
+    <p>Cher {{client}},</p>
 
-    <p>We wanted to take a moment to express our sincere appreciation for your recent purchase of our music band
-        t-shirt. Your support as a fan means everything to us, and we are truly grateful for your decision to wear
-        our merchandise.
+    <p>Nous voulions profiter de ce moment pour exprimer notre sincère gratitude pour votre récent achat du
+        notre groupe de musique. Votre soutien en tant que fan signifie tout pour nous, et nous sommes vraiment reconnaissants pour le
+        votre décision d'utiliser notre marchandise.
     </p>
-    <p>Please rest assured that we have taken note of your shipping address, and we will make every effort to
-        dispatch your t-shirt promptly. We value your patience and understanding as we work to get your order to you
-        swiftly.
+    <p> Soyez assuré que nous avons noté votre adresse de livraison et ferons tout notre possible pour vous expédier votre chemise.
+        facilement. Nous apprécions votre patience et votre compréhension pendant que nous nous efforçons de livrer votre commande.
+        rapidement.
     </p>
-    <p>Once again, we want to express our deepest gratitude for your support. Your purchase not only helps us
-        financially but also motivates us to continue creating and sharing our music with the world. We can't wait
-        for you to receive your t-shirt and join us in proudly representing our band.
+    <p>Une fois de plus, nous tenons à exprimer notre profonde gratitude pour votre soutien. Votre achat nous aide non seulement
+        financièrement, mais cela nous motive également à continuer à créer et à partager notre musique avec le monde. Mauvais
+        nous avons hâte que vous receviez votre t-shirt et rejoignez-nous pour représenter fièrement notre
+        groupe.
     </p>
-
-    <p>Thank you once again for being an incredible fan and for supporting our musical journey.
+    <p>Merci encore d'être un fan incroyable et de soutenir notre voyage musical.
     </p>
     <p>Rock on!</p>
-
     <p>Dul and Nouk White</p>
 </article>
+
 
