--- a/views/fr/store.tmpl
+++ b/views/fr/store.tmpl
@@ -1,31 +1,31 @@
 <article>
 
-    <p>The visual art of the Dul and Nouk White album cover, was designed by the artist Sílvio Pita, and addresses, by
-        detail, the entire three-dimensional plane of existence which includes the five interpreting organisms that
-        form the core of the project. The Life process is represented here as an infinite cycle, where the Cosmos is
-        place of beginning and end, thus merging the neural zone of the interior of the earth, where the
-        mycelia, roots and seeds, with the expanded Universe, from where we came and where we will return, place
-        where all the basic components for the development of Life on Earth are found.</p>
+    <p>El arte visual de la portada del disco Dul and Nouk White, fue diseñado por el artista Sílvio Pita, y aborda, por
+        detalle, todo el plano tridimensional de la existencia que incluye los cinco organismos interpretadores que
+        forman el núcleo del proyecto. El proceso de la Vida se representa aquí como un ciclo infinito, donde el Cosmos se
+        lugar de principio y fin, fundiéndose así la zona neural del interior de la tierra, donde
+        micelio, raíces y semillas, con el Universo expandido, de donde venimos y a donde regresaremos, lugar
+        donde se encuentran todos los componentes básicos para el desarrollo de la Vida en la Tierra.</p>
 
-    <p>The tree is represented here as the living being that traverses the three planes of existence, and that contributes,
-        actively, in the decomposition and conception of the concept that we have of Life, taking it dispersed at the ends of our
-        its branches towards the heavens, catapulting us, again, towards the end that is also a beginning.</p>
+    <p>El árbol se representa aquí como el ser vivo que atraviesa los tres planos de existencia, y que contribuye,
+        activamente, en la descomposición y concepción del concepto que tenemos de la Vida, tomándolo disperso en los extremos de nuestra
+        sus ramas hacia el cielo, catapultándonos, nuevamente, hacia el final que también es un comienzo.</p>
 
     <section>
         <figure>
-            <img src="/img/Frente_fundo_azul.jpg" alt="T-Shirt Front" style="width:100%">
-            <figcaption>Front</figcaption>
+            <img src="/img/Frente_fundo_azul.jpg" alt="T-shirt devant" style="width:100%">
+            <figcaption>Devant</figcaption>
         </figure>
         <figure>
-            <img src="/img/Tshirt_verso.jpg" alt="T-Shirt Back" style="width:100%">
-            <figcaption>Back</figcaption>
+            <img src="/img/Tshirt_verso.jpg" alt="Dos du tee-shirt" style="width:100%">
+            <figcaption>Dos du tee-shirt</figcaption>
         </figure>
     </section>
     <form>
         <div class="form-group mb-3">
-            <label for="size">Choose size</label>
+            <label for="size">Choisir la taille</label>
             <select class="form-control" id="size" name="size" required>
-                <option value disabled selected>Click to show list of options</option>
+                <option value disabled selected>Cliquez pour afficher la liste des options</option>
                 <option value="XS">XS</option>
                 <option value="S">S</option>
                 <option value="M">M</option>
@@ -35,12 +35,12 @@
             </select>
         </div>
         <div class="form-group mb-5">
-            <label for="qtd">Choose a quantity</label>
+            <label for="qtd">Choisissez une quantité</label>
             <input type="number" class="form-control" id="qtd" name="qtd" placeholder="1" value="1" min="1"
                    required>
         </div>
         <div class="form-group mb-3">
-            <input class="btn btn-primary" type="submit" value="Add to Cart"/>
+            <input class="btn btn-primary" type="submit" value="Ajouter au panier"/>
         </div>
     </form>
 </article>
