--- a/views/landing.tmpl
+++ b/views/landing.tmpl
@@ -4,7 +4,7 @@
 <body>
 <main>
     <header>
-        <img src="img/fundo5.jpg" alt="Dul N'Nouk White"/>
+        <img src="/img/fundo5.jpg" alt="Dul N'Nouk White"/>
     </header>
     {{{article}}}
     <footer>
@@ -19,7 +19,7 @@
         </a>
     </footer>
 </main>
-<script src="node_modules/store2/dist/store2.min.js"></script>
-<script type="text/javascript" src="js/index.js?{{cache}}"></script>
+<script src="/node_modules/store2/dist/store2.min.js"></script>
+<script type="text/javascript" src="/js/index.js?{{cache}}"></script>
 </body>
 </html>
