--- a/views/pt/paypal/success.tmpl
+++ b/views/pt/paypal/success.tmpl
@@ -1,23 +1,25 @@
+<header>
+    <i class="fa-solid fa-circle-xmark"></i>
+</header>
 <article>
-    <p>Dear {{customer}},</p>
+    <p>Caro(a) {{customer}},</p>
 
-    <p>We wanted to take a moment to express our sincere appreciation for your recent purchase of our music band
-        t-shirt. Your support as a fan means everything to us, and we are truly grateful for your decision to wear
-        our merchandise.
+    <p>Queríamos aproveitar este momento para expressar nossa sincera gratidão pela sua recente compra da camiseta da
+        nossa banda de música. O seu apoio como fã significa tudo para nós, e estamos verdadeiramente agradecidos pela
+        sua decisão de usar a nossa mercadoria.
     </p>
-    <p>Please rest assured that we have taken note of your shipping address, and we will make every effort to
-        dispatch your t-shirt promptly. We value your patience and understanding as we work to get your order to you
-        swiftly.
+    <p>Tenha a certeza de que anotamos o seu endereço de entrega e faremos todos os esforços para enviar a sua camiseta
+        prontamente. Valorizamos a sua paciência e compreensão enquanto trabalhamos para entregar o seu pedido
+        rapidamente.
     </p>
-    <p>Once again, we want to express our deepest gratitude for your support. Your purchase not only helps us
-        financially but also motivates us to continue creating and sharing our music with the world. We can't wait
-        for you to receive your t-shirt and join us in proudly representing our band.
+    <p>Mais uma vez, queremos expressar nossa profunda gratidão pelo seu apoio. Sua compra não apenas nos ajuda
+        financeiramente, mas também nos motiva a continuar criando e compartilhando nossa música com o mundo. Mal
+        podemos esperar para que você receba a sua camiseta e se junte a nós ao representar orgulhosamente a nossa
+        banda.
     </p>
-
-    <p>Thank you once again for being an incredible fan and for supporting our musical journey.
+    <p>Mais uma vez, obrigado por ser um fã incrível e por apoiar a nossa jornada musical.
     </p>
-    <p>Rock on!</p>
-
+    <p>Rock on!
+    </p>
     <p>Dul and Nouk White</p>
 </article>
-
