--- a/views/store.tmpl
+++ b/views/store.tmpl
@@ -4,7 +4,8 @@
 <body>
 <main>
     <header>
-        <img src="img/fundo5.jpg" alt="Dul N'Nouk White"/>
+        <h1>Dul and Nouk White</h1>
+        <h2>Orgânico 2023</h2>
     </header>
     {{{article}}}
     <footer>
