--- a/views/pt/cart.tmpl
+++ b/views/pt/cart.tmpl
@@ -21,6 +21,6 @@
     </table>
 </main>
 <footer>
-    <button type="button" class="btn btn-danger">Cancelar compra</button>
+    <button type="button" class="btn btn-danger">Cancelar</button>
     <button type="button" class="btn btn-success">Finalizar compra</button>
 </footer>
