--- a/views/pt/store.tmpl
+++ b/views/pt/store.tmpl
@@ -1,31 +1,31 @@
 <article>
 
-    <p>The visual art of the Dul and Nouk White album cover, was designed by the artist Sílvio Pita, and addresses, by
-        detail, the entire three-dimensional plane of existence which includes the five interpreting organisms that
-        form the core of the project. The Life process is represented here as an infinite cycle, where the Cosmos is
-        place of beginning and end, thus merging the neural zone of the interior of the earth, where the
-        mycelia, roots and seeds, with the expanded Universe, from where we came and where we will return, place
-        where all the basic components for the development of Life on Earth are found.</p>
+    <p>A arte visual da capa do álbum de Dul and Nouk White, foi desenhada pelo artista Sílvio Pita, e aborda, ao
+        pormenor, todo o plano tridimensional da existência onde se incluem os cinco organismos intérpretes que
+        formam o núcleo do projeto. O processo de Vida é aqui representado como um ciclo infinito, onde o Cosmos é
+        lugar de início e de fim, fundindo deste modo a zona neural do interior da terra, onde se encontram os
+        micélios, as raízes e as sementes, com o expandido Universo, de onde vimos e para onde retornaremos, lugar
+        onde se encontram todos os componentes-base para o desenvolvimento da Vida na Terra.</p>
 
-    <p>The tree is represented here as the living being that traverses the three planes of existence, and that contributes,
-        actively, in the decomposition and conception of the concept that we have of Life, taking it dispersed at the ends of our
-        its branches towards the heavens, catapulting us, again, towards the end that is also a beginning.</p>
+    <p>A árvore aqui é representada como o ser vivo que atravessa os três planos da existência, e que contribui,
+        ativamente, na decomposição e na concepção do conceito que temos de Vida, levando-a dispersa na ponta dos
+        seus galhos em direção aos céus, catapultando-nos, novamente, para o fim que é, também um início.</p>
 
     <section>
         <figure>
-            <img src="/img/Frente_fundo_azul.jpg" alt="T-Shirt Front" style="width:100%">
-            <figcaption>Front</figcaption>
+            <img src="/img/Frente_fundo_azul.jpg" alt="T-Shirt Frente" style="width:100%">
+            <figcaption>Frente</figcaption>
         </figure>
         <figure>
-            <img src="/img/Tshirt_verso.jpg" alt="T-Shirt Back" style="width:100%">
-            <figcaption>Back</figcaption>
+            <img src="/img/Tshirt_verso.jpg" alt="T-Shirt Verso" style="width:100%">
+            <figcaption>Verso</figcaption>
         </figure>
     </section>
     <form>
         <div class="form-group mb-3">
-            <label for="size">Choose size</label>
+            <label for="size">Escolha o tamanho</label>
             <select class="form-control" id="size" name="size" required>
-                <option value disabled selected>Click to show list of options</option>
+                <option value disabled selected>Clique para mostrar a lista de opções</option>
                 <option value="XS">XS</option>
                 <option value="S">S</option>
                 <option value="M">M</option>
@@ -35,12 +35,12 @@
             </select>
         </div>
         <div class="form-group mb-5">
-            <label for="qtd">Choose a quantity</label>
+            <label for="qtd">Escolha uma quantidade</label>
             <input type="number" class="form-control" id="qtd" name="qtd" placeholder="1" value="1" min="1"
                    required>
         </div>
         <div class="form-group mb-3">
-            <input class="btn btn-primary" type="submit" value="Add to Cart"/>
+            <input class="btn btn-primary" type="submit" value="Adicionar ao carrinho"/>
         </div>
     </form>
 </article>
