--- a/views/landing.tmpl
+++ b/views/landing.tmpl
@@ -21,5 +21,7 @@
 </main>
 <script src="/node_modules/store2/dist/store2.min.js"></script>
 <script type="text/javascript" src="/js/index.js?{{cache}}"></script>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets9.lottiefiles.com/packages/lf20_yeyxce62.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay></lottie-player>
 </body>
 </html>
