--- a/views/fr/landing.tmpl
+++ b/views/fr/landing.tmpl
@@ -23,3 +23,7 @@
     <ion-icon name="volume-mute-outline"></ion-icon>
     <ion-icon name="volume-off-outline"></ion-icon>
 </section>
+<div onclick="window.location = '/fr/store';" title="Cliquez pour entrer dans la boutique !">
+    <i class="fa-solid fa-store"></i>
+    <span>Nous avons des t-shirts à vendre !</span>
+</div>
