--- a/views/pt/landing.tmpl
+++ b/views/pt/landing.tmpl
@@ -23,3 +23,7 @@
     <ion-icon name="volume-mute-outline"></ion-icon>
     <ion-icon name="volume-off-outline"></ion-icon>
 </section>
+<div onclick="window.location = '/pt/store';" title="Clique para entrar na loja!">
+<i class="fa-solid fa-store"></i>
+<span>Temos t-shirts á venda!</span>
+</div>
