--- a/views/en/landing.tmpl
+++ b/views/en/landing.tmpl
@@ -22,3 +22,7 @@
     <ion-icon name="volume-mute-outline"></ion-icon>
     <ion-icon name="volume-off-outline"></ion-icon>
 </section>
+<div onclick="window.location = '/en/store';" title="Click to enter the store!">
+<i class="fa-solid fa-store"></i>
+<span>We have t-shirts for sale!</span>
+</div>
