--- a/views/en/store.tmpl
+++ b/views/en/store.tmpl
@@ -44,3 +44,7 @@
         </div>
     </form>
 </article>
+<div onclick="window.location = '/en';" title="Click to go back to the main page!">
+<i class="fa-solid fa-house"></i>
+<span>Go Back</span>
+</div>
