--- a/views/fr/store.tmpl
+++ b/views/fr/store.tmpl
@@ -44,3 +44,7 @@
         </div>
     </form>
 </article>
+<div onclick="window.location = '/fr';" title="Cliquez pour revenir à la page principale !">
+<i class="fa-solid fa-house"></i>
+<span>Retourner</span>
+</div>
