--- a/views/pt/store.tmpl
+++ b/views/pt/store.tmpl
@@ -44,3 +44,7 @@
         </div>
     </form>
 </article>
+<div onclick="window.location = '/pt';" title="Clique para voltar para a página principal!">
+<i class="fa-solid fa-house"></i>
+<span>Voltar Atrás</span>
+</div>
