--- a/views/fr/landing.tmpl
+++ b/views/fr/landing.tmpl
@@ -25,5 +25,5 @@
 </section>
 <div onclick="window.location = '/fr/store';" title="Cliquez pour entrer dans la boutique !">
     <i class="fa-solid fa-store"></i>
-    <span>Nous avons des t-shirts à vendre !</span>
+    <span>Aidez-nous et achetez nos chemises !</span>
 </div>
