--- a/views/pt/landing.tmpl
+++ b/views/pt/landing.tmpl
@@ -25,5 +25,5 @@
 </section>
 <div onclick="window.location = '/pt/store';" title="Clique para entrar na loja!">
 <i class="fa-solid fa-store"></i>
-<span>Temos t-shirts á venda!</span>
+<span>Ajude-nos e compre as nossas camisas!</span>
 </div>
