--- a/views/en/landing.tmpl
+++ b/views/en/landing.tmpl
@@ -24,5 +24,5 @@
 </section>
 <div onclick="window.location = '/en/store';" title="Click to enter the store!">
 <i class="fa-solid fa-store"></i>
-<span>We have t-shirts for sale!</span>
+<span>Help us & Buy our shirts!</span>
 </div>
