--- a/views/en/paypal/success.tmpl
+++ b/views/en/paypal/success.tmpl
@@ -2,7 +2,7 @@
     <i class="fa-solid fa-circle-xmark"></i>
 </header>
 <article>
-    <p>Dear {{customer}},</p>
+    <p>Dear {{payer.payer_info.first_name}} {{payer.payer_info.last_name}},</p>
 
     <p>We wanted to take a moment to express our sincere appreciation for your recent purchase of our music band
         t-shirt. Your support as a fan means everything to us, and we are truly grateful for your decision to wear
