--- a/views/fr/paypal/success.tmpl
+++ b/views/fr/paypal/success.tmpl
@@ -2,7 +2,7 @@
     <i class="fa-solid fa-circle-xmark"></i>
 </header>
 <article>
-    <p>Cher {{client}},</p>
+    <p>Cher {{payer.payer_info.first_name}} {{payer.payer_info.last_name}},</p>
 
     <p>Nous voulions profiter de ce moment pour exprimer notre sincère gratitude pour votre récent achat du
         notre groupe de musique. Votre soutien en tant que fan signifie tout pour nous, et nous sommes vraiment reconnaissants pour le
