--- a/views/pt/paypal/success.tmpl
+++ b/views/pt/paypal/success.tmpl
@@ -2,7 +2,7 @@
     <i class="fa-solid fa-circle-xmark"></i>
 </header>
 <article>
-    <p>Caro(a) {{customer}},</p>
+    <p>Caro(a) {{payer.payer_info.first_name}} {{payer.payer_info.last_name}},</p>
 
     <p>Queríamos aproveitar este momento para expressar nossa sincera gratidão pela sua recente compra da camiseta da
         nossa banda de música. O seu apoio como fã significa tudo para nós, e estamos verdadeiramente agradecidos pela
